# Cuckoo_Heavy_Keeper

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  perf.data  readme.md
examples/: CMakeLists.bak.txt  CMakeLists.txt  example_module1.cpp
examples/concurrent_data_structure/: example_lcr_queue.cpp  example_lockbased_concurrent_heap.cpp  example_ms_queue.cpp  example_queue_common.hpp  example_treiber_stack.cpp
examples/delegation_sketch/: example_delegation_heavyhitter.cpp  example_delegation_heavyhitter_QPOPSS.cpp  example_delegation_sketch.cpp  example_delegation_test.cpp
examples/frequency_estimator/: example_frequency_estimator.cpp  example_heavyhitter.cpp
examples/prif/: example_prif.cpp
examples/test/: test.cpp  test3.cpp
experimental_results/: experimental_setup.md
microbench/: weighted_update.cpp  weighted_update.txt
notebooks/: analyze_latency_par.ipynb  analyze_latency_par.py  analyze_sequential.py  analyze_stats_collector.ipynb  analyze_throughput_par.ipynb  analyze_throughput_par.py  experiment_accuracy.py  experiment_parallel.py  experiment_sequential.ipynb  experiment_sequential.py
notebooks/revision/: analyze_latency_par.py  analyze_latency_par_new_double.py  analyze_sequential.py  analyze_sequential_sensitivity.py  analyze_throughput_par.py  analyze_throughput_par_new_double.py  analyze_throughput_par_realworld.py  experiment_parallel_extra.py  experiment_sequential_extra.py
src/: CMakeLists.txt
src/concurrent_data_structure/: HazardPointers.hpp  LCRQueue.hpp  LockBasedConcurrentHeap.hpp  MichaelScottQueue.hpp  TreiberStack.hpp
src/concurrent_data_structure/libcuckoo/: bucket_container.hh  cuckoohash_map.hh
src/delegation_sketch/: DelegationBuildConfig.hpp  DelegationConfig.hpp  DelegationFilter.cpp  DelegationFilter.hpp  DelegationHeavyHitter.hpp  DelegationHeavyHitter.ipp  DelegationSketch.hpp  DelegationSketch.ipp  PendingQuery.cpp  PendingQuery.hpp  StatCollector.cpp  StatCollector.hpp  delegation_sketch_test_utils.hpp  delegation_sketch_utils.cpp  delegation_sketch_utils.hpp
src/frequency_estimator/: AugmentedSketch.cpp  AugmentedSketch.hpp  BoundedKeyValuePriorityQueue.hpp  CountMinSketch.cpp  CountMinSketch.hpp  CuckooHeavyKeeper.cpp  CuckooHeavyKeeper.hpp  CustomizedHeap.hpp  FrequencyEstimatorBase.hpp  FrequencyEstimatorConfig.hpp  FrequencyEstimatorFactory.hpp  FrequencyEstimatorTrait.hpp  HeapHashMapSpaceSaving.hpp  HeavyGuardian.cpp  HeavyGuardian.hpp  HeavyKeeper.cpp  HeavyKeeper.hpp  MacroPreprocessor.hpp  OptimizedWeightedFrequent.hpp  SequentialHeavyHitterWrapper.hpp  SequentialHeavyHitterWrapper.ipp  SequentialHeavyHitterWrapperForParallel.hpp  SequentialHeavyHitterWrapperForParallel.ipp  SpaceSaving.cpp  SpaceSaving.hpp  StreamSummary.hpp  StreamSummarySpaceSaving.cpp  StreamSummarySpaceSaving.hpp  WeightedFrequent.hpp  sequential_frequency_estimator_test_utils.hpp  sequential_heavyhitter_test_utils.hpp
src/frequency_estimator/elastic_sketch/: Bucket.hpp  EMFSD.hpp  ElasticSketch.cpp  ElasticSketch.hpp  HeavyPart.cpp  HeavyPart.hpp  LightPart.cpp  LightPart.hpp  params.hpp
src/hash/: BOBHash32.cpp  BOBHash32.hpp  BOBHash64.cpp  BOBHash64.hpp
src/heavy_hitter_app/: AppConfig.hpp  Relation.hpp  heavy_hitter_test_utils.hpp
src/module1/: module1.cpp  module1.hpp
src/prif/: PRIF.hpp  PRIFConfig.hpp  prif_test_utils.hpp
src/utils/: ConfigParser.hpp  getticks.hpp
test/: CMakeLists.txt
test/module1/: test_module1.cpp
tools/: check_distribution.ipynb
