include(GoogleTest)

# Module 1
# Collect all test sources
# file(GLOB_RECURSE TEST_MODULE1_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/module1/*.cpp")

# Create an executable for the tests
# add_executable(test_module1 ${test_module1_SOURCES})

# Link the test executable with Google Test and your module1 library
# target_link_libraries(test_module1 PRIVATE gtest gtest_main module1_objects)

# Enable testing
# enable_testing()

# Register the test with CMake
# add_test(NAME test_module1 COMMAND test_module1)
